@@ -1,3 +1,8 @@
+2006-01-03  Jonathon Jongsma  <jonathon.jongsma@gmail.com>
+
+	* cairomm/surface.cc: added missing implementations for reference() and
+	unreference() functions
+
 0.4.0:
 
 2005-12-17  Murray Cumming  <murrayc@murrayc.com>
